Generator/Tests/NeedleFrameworkTests/Fixtures/InvalidInits/InvalidInits1.swift
class BParentComponent: Component<EmptyDependency> {

    func newComp(param: Stuff) -> MyComponent {
        return MyComponent   (  parent   :    param)
    }
}
